--- a/libretas/clasificadores.ipynb
+++ b/libretas/clasificadores.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./imagenes/ia.png\", width=\"200\")\\>\n",
+    "<img src=\"imagenes/ia.png\", width=\"200\")\\>\n",
     "# Comparasión de diferentes clasificadores"
    ]
   },
