--- a/libretas/intro_numpy.ipynb
+++ b/libretas/intro_numpy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"imagenes/ia.png\", width=\"200\")\\>\n",
+    "<img src=\"imagenes/ia.png\", width=\"200\"\\>\n",
     "# Introducción a Numpy y Matplotlib"
    ]
   },
