inicio tercera libreta

--- a/libretas/clasificadores.ipynb
+++ b/libretas/clasificadores.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "<img src=\"imagenes/ia.png\", width=\"200\" \\>\n",
-    "# Comparasión de diferentes clasificadores"
+    "# Comparación de diferentes clasificadores\n",
+    "\n",
+    "[**Julio Waissman Vilanova**](http://mat.uson.mx/~juliowaissman/)."
    ]
   },
   {
